misc/daoctl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daoctl
  namespace: monitoring
  labels:
    app: daoctl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daoctl
  template:
    metadata:
      labels:
        app: daoctl
    spec:
      containers:
      - name: daoctl
        image: dsmaxds/daoctl:latest
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: daoctl
  namespace: monitoring
spec:
  ports:
    - name: hypha-prom
      port: 8085
      targetPort: 8085
  selector:
    app: daoctl
