misc/docker-regsitry.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    name: docker-registry
  selector:
    app: docker-registry
