misc/document-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-cache
  labels: 
    app: document-cache
    env: test
spec:
  selector:
    matchLabels:
      app: document-cache
      env: test
  replicas: 1
  template:
    metadata:
      labels:
        app: document-cache
        env: test
    spec:
      containers:
        - name: document-cache-instrumentation
          image: sebastianmontero/document-cache-instrumentation:latest
          command: ["node"]
          args: ["src/start.js"]
---
apiVersion: v1
kind: Service
metadata:
  name: document-cache-prom-service
  labels:
    app: document-cache
spec:
  type: NodePort
  selector:
    app: document-cache
  ports:
  - name: prom
    port: 9090
    targetPort: 9090
    protocol: TCP
