misc/fi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fi

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fi-dfuse-statefulset
  namespace: fi
  labels:
    app: fi-dfuse
    env: local
spec:
  replicas: 1
  serviceName: fi-dfuse-service
  selector:
    matchLabels:
      app: fi-dfuse
      env: local
  template:
    metadata:
      namespace: fi
      labels:
        app: fi-dfuse
        env: local
    spec:
      # serviceAccountName: dfuse-service-account
      # serviceAccount: dfuse/dfuse-service-account
      containers:
      - name: dfuse-eosio
        image: dfuse/dfuse-eosio:80117b5
        imagePullPolicy: IfNotPresent
        command: ["/app/dfuseeos"]
        args: ["start", "-c", "/config/dfuse.yaml", "--data-dir", "/dfuse-data", "-v"]
        ports:
        - containerPort: 8081
          name: dash
          protocol: TCP
        - containerPort: 8888
          name: nodeos-api
          protocol: TCP
        - containerPort: 9000
          name: firehose
          protocol: TCP
        - containerPort: 9102
          name: metrics
          protocol: TCP
        - containerPort: 13008
          name: nm-api
          protocol: TCP
        - containerPort: 13023
          name: dgql-http
          protocol: TCP
        - containerPort: 13024
          name: dgql-grpc
          protocol: TCP
        - containerPort: 13026
          name: eosws
          protocol: TCP
        - containerPort: 13030
          name: eosq
          protocol: TCP
        volumeMounts:
        - name: fi-dfuse-data
          mountPath: /dfuse-data
        - name: fi-dfuse-config
          mountPath: /config/dfuse.yaml
          subPath: dfuse.yaml
        - name: fi-mindreader-config-ini
          mountPath: /config/mindreader/config.ini
          subPath: config.ini
        - name: fi-mindreader-test-genesis
          mountPath: /config/mindreader/genesis.json
          subPath: genesis.json
        - name: fi-nodeos-config-ini
          mountPath: /config/producer/config.ini
          subPath: config.ini
        - name: fi-nodeos-test-genesis
          mountPath: /config/producer/genesis.json
          subPath: genesis.json
        # - name: dfuse-service-account-token-jsp6h
        #   readOnly: true
        #   mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      volumes:
      - name: fi-dfuse-data
        persistentVolumeClaim:
          claimName: fi-dfuse-data
      - name: fi-dfuse-config
        configMap:
          name: fi-dfuse-config
      - name: fi-mindreader-config-ini
        configMap:
          name: fi-mindreader-config-ini
      - name: fi-nodeos-config-ini
        configMap:
          name: fi-nodeos-config-ini
      - name: fi-mindreader-test-genesis
        configMap:
          name: fi-genesis
      - name: fi-nodeos-test-genesis
        configMap:
          name: fi-genesis
      # - name: dfuse-service-account-token-jsp6h
      #   secret:
      #     secretName: dfuse-service-account-token-jsp6h
      #     defaultMode: 420

---
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   service.alpha.kubernetes.io/app-protocols: '{"grpc":"HTTP2"}'
  name: fi-dfuse-service-cluster
  namespace: fi
  labels:
    app: fi-dfuse
    env: local
spec:
  type: ClusterIP
  ports:
  - targetPort: 8081
    port: 8081
    protocol: TCP
    name: dashboard
  - port: 8888
    targetPort: 8888
    protocol: TCP
    name: nodeos-api
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: firehose
  - port: 9102
    targetPort: 9102
    protocol: TCP
    name: metrics
  - targetPort: 13008
    port: 13008
    protocol: TCP
    name: nm-api
  - targetPort: 13023
    port: 13023
    protocol: TCP
    name: dgql-http
  - targetPort: 13024
    port: 13024
    protocol: TCP
    name: dgql-grpc
  - targetPort: 13026
    port: 13026
    protocol: TCP
    name: eosws        
  - targetPort: 13030
    port: 13030
    protocol: TCP
    name: eosq
  selector:
    app: fi-dfuse
    env: local
  
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fi-ingress
  namespace: fi
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - dapi.fi1.tekit.io
    - dash.fi1.tekit.io
    - n.fi1.tekit.io
    - nm.fi1.tekit.io
    - pm.fi1.tekit.io
    - q.fi1.tekit.io
    secretName: fi-tekit-tls
  rules:
  - host: dapi.fi1.tekit.io
    http:
      paths:
      - path: /dfuse.eosio.v1.GraphQL/
        pathType: Prefix
        backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13024
      - path: /dfuse.graphql.v1.GraphQL/
        pathType: Prefix
        backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13024
      - path: /grpc.reflection.v1alpha.ServerReflection/
        pathType: Prefix
        backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13024
      - path: /graphiql/
        pathType: Prefix
        backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13023
      - path: /graphql
        pathType: Prefix
        backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13023
      - path: /v1/chain/
        pathType: Prefix
        backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13026
      - path: /v1/stream
        pathType: Prefix
        backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13026
      - path: /v0/
        pathType: Prefix
        backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13026
      - path: /v1/
        pathType: Prefix
        backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13026
      - path: /
        pathType: Prefix
        backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13026
  - host: dash.fi1.tekit.io
    http:
      paths:
      - backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 8081
  - host: n.fi1.tekit.io
    http:
      paths:
      - backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 8888
  - host: nm.fi1.tekit.io
    http:
      paths:
      - backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13008
  - host: pm.fi1.tekit.io
    http:
      paths:
      - backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 9102
  - host: q.fi1.tekit.io
    http:
      paths:
      - backend:
          serviceName: fi-dfuse-service-cluster
          servicePort: 13030
