misc/gitea-tekit-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitea-tekit-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - gitea.tekit.io
    secretName: gitea-tekit-tls
  rules:
  - host: gitea.tekit.io
    http:
      paths:
      - backend:
          serviceName: gitea-http
          servicePort: 3000
