misc/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.global-static-ip-name: tekit-ip
spec:
  tls:
  - hosts:
    - grafana.tekit.io
    secretName: grafana-tekit-tls
  rules:
  - host: grafana.tekit.io
    http:
      paths:
      - backend:
          serviceName: tekit-prometheus-grafana
          servicePort: 80
