misc/p2p-test-tekit-io-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: p2p-test-tekit-ingress
  namespace: dfuse
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: p2p-test.tekit.io
    http:
      paths:
      - backend:
          serviceName: telos-testnet-node-manager
          servicePort: 9876
