misc/test-tekit-io-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-tekit-ingress
  namespace: dfuse
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - test.tekit.io
    secretName: test-tekit-tls
  rules:
  - host: test.tekit.io
    http:
      paths:
      - backend:
          serviceName: telos-testnet-node-manager
          servicePort: 8888
